k8s-deploy/api4/deploy_svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api4
  name: api4-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api4
  template:
    metadata:
      labels:
        app: api4
    spec:
      containers:
      - image: ktalant/api4:v1
        name: api4
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api4-svc
  labels:
    app: api4
spec:
  ports:
  - port: 8080
    targetPort: 5000
    protocol: TCP
  selector:
    app: api4
