k8s-deploy/api4/gateway_vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api4-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "employee.spacextech.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api4-vs
spec:
  hosts:
  - api4-svc.default.svc.cluster.local
  gateways:
  - api4-gateway
  http:
  - match:
    - uri:
        prefix: /employee
    # - uri:
    #     prefix: /delay
    route:
    - destination:
        port:
          number: 5000
        host: api4-svc
